Bug 391967 - Konsole doesn't report mouse moves in ESC[?1003h mode
Summary: Konsole doesn't report mouse moves in ESC[?1003h mode
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: emulation (other bugs)
Version First Reported In: 17.12.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-17 15:26 UTC by gumix
Modified: 2021-06-07 18:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gumix 2018-03-17 15:26:27 UTC
Konsole accepts ESC[?1003h but reports only mouse buttons & dragging events - no mouse moves. Enabling ESC[?1006h makes no difference.
Comment 1 Derek Christ 2021-03-21 15:10:27 UTC
*** Bug 423333 has been marked as a duplicate of this bug. ***
Comment 2 tcanabrava 2021-06-07 18:04:57 UTC
Git commit b5d174385529e5ba3551406bb8d90fa317b5bf00 by Tomaz  Canabrava, on behalf of Luis Javier Merino Morán.
Committed on 07/06/2021 at 18:03.
Pushed by tcanabrava into branch 'master'.

Support DECSET 1003 mouse move tracking

Mode 1003 reports all mouse movement.  Support it in Konsole.
Related: bug 416530, bug 423333

M  +7    -3    src/Vt102Emulation.cpp
M  +5    -4    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/b5d174385529e5ba3551406bb8d90fa317b5bf00