Support DECSET 1003 mouse move tracking

Mode 1003 reports all mouse movement.  Support it in Konsole.

BUG: 391967
BUG: 416530
BUG: 423333